--- a/src/UserBundle/Resources/views/Session/signup.html.twig
+++ b/src/UserBundle/Resources/views/Session/signup.html.twig
@@ -7,8 +7,25 @@
  
     <h3>Formulaire d'inscription</h3>
 
-    <div class="well">
-    {{ form(form) }}
+    <div class="row">
+        <div class="col-lg-offset-2 col-lg-8">
+            <div class="well">
+                {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
+                {{ form_errors(form) }}
+
+                <div class="form-group">
+                    {{ form_row(form.username) }}
+                </div>
+                <div class="form-group">
+                    {{ form_row(form.roles) }}
+                </div>
+                
+                {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
+
+                {{ form_rest(form) }}
+                {{ form_end(form) }}
+            </div>
+        </div>
     </div>
 
 {% endblock %}
