--- a/src/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/UserBundle/Resources/views/Default/index.html.twig
@@ -33,6 +33,7 @@
         <p><a href=" {{ path('admin_users') }} ">GÉRER LES COMPTES UTILISATEURS</a></p>
         <p><a href=" {{ path('add_question') }} ">AJOUTER DES QUESTIONS</a></p>
         <p><a href=" {{ path('moderate_question') }} ">MODÉRER LES QUESTIONS</a></p>
+        <p><a href=" {{ path('options_question') }} ">OPTIONS DES QUESTIONS</a></p>
         <p><a href=" {{ path('check_scores') }} ">CONSULTER LES SCORES</a></p>
     
     {% else %}
