--- a/src/GameBundle/Resources/views/Admin/user_manager.html.twig
+++ b/src/GameBundle/Resources/views/Admin/user_manager.html.twig
@@ -8,7 +8,15 @@
   <div class="container-fluid">
 
     {% for message in app.session.flashbag.get('notice') %}
-      <p>Message flash : {{ message }}</p>
+      <div class="alert alert-danger">
+        <p>{{ message }}</p>
+      </div>
+    {% endfor %}
+
+    {% for message in app.session.flashbag.get('success') %}
+      <div class="alert alert-success">
+        <p>{{ message }}</p>
+      </div>
     {% endfor %}
 
     <h3>GESTION DES UTILISATEURS</h3>
