--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
     {% for message in app.session.flashbag.get('notice') %}
-      <p>Message flash : {{ message }}</p>
+      <p>{{ message }}</p>
     {% endfor %}
  
     <h2>{{ title }}</h2>
