--- a/src/UserBundle/Resources/views/Gamer/form_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/form_gamer.html.twig
@@ -1,26 +1,26 @@
-{# src/UserBundle/Resources/views/Default/form.html.twig #}
+{# src/UserBundle/Resources/views/Gamer/form_gamer.html.twig #}
 
-{% extends "UserBundle::layout.html.twig" %}
+{% extends "GameBundle::layout.html.twig" %}
 
-{% block title %}{{ parent() }} - {{ titleTab }} {% endblock %}
+{% block title %}{{ parent() }} - Index{% endblock %}
 
 {% block body %}
-
     {% for message in app.session.flashbag.get('notice') %}
-        <div class="alert alert-danger">
-            <p>{{ message }}</p>
-        </div>
-    {% endfor %}
-    {% for message in app.session.flashbag.get('success') %}
-        <div class="alert alert-success">
-            <p>{{ message }}</p>
-        </div>
+      <div class="alert alert-danger">
+        <p>{{ message }}</p>
+      </div>
     {% endfor %}
 
-    <h3>{{ title }}</h3>
+    {% for message in app.session.flashbag.get('success') %}
+      <div class="alert alert-success">
+        <p>{{ message }}</p>
+      </div>
+    {% endfor %}
+
+    <h3>Ajouter un joueur</h3>
 
     <div class="row">
-        <div class="col-lg-offset-2 col-lg-8">
+        <div class="col-lg-offset-4 col-lg-4">
             <div class="well">
                 {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
                 {{ form_errors(form) }}
@@ -31,13 +31,18 @@
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {% if form.password is defined %}
-                        {{ form_row(form.password) }}
+                    {% if form.firstname is defined %}
+                        {{ form_row(form.firstname) }}
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {% if form.roles is defined %}
-                        {{ form_row(form.roles) }}
+                    {% if form.role is defined %}
+                        {{ form_row(form.role) }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {% if form.schoolClass is defined %}
+                        {{ form_row(form.schoolClass) }}
                     {% endif %}
                 </div>
                 
@@ -48,5 +53,6 @@
             </div>
         </div>
     </div>
+
 
 {% endblock %}
