--- a/src/UserBundle/Resources/views/Gamer/form_gamer.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/form_gamer.html.twig
@@ -17,7 +17,7 @@
       </div>
     {% endfor %}
 
-    <h3>Ajouter un joueur</h3>
+    <h3>{{ title }} </h3>
 
     <div class="row">
         <div class="col-lg-offset-4 col-lg-4">
