mise en place du jeu : intégration du plateau, ..

--- a/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/admin_gamers.html.twig
@@ -29,11 +29,11 @@
                 <th>Pseudo</th>
                 <th>Prénom</th>
                 <th>Rôle</th>
-                <th>Classe</th>
+                <th>Classe / Niveau</th>
                 <th>Meilleur score</th>
                 <th>Nombre de parties gagnées</th>
                 <th>Nombre de bonnes réponses</th>
-                <th>Niveau</th>
+                <th>Niveau atteint</th>
                 <th>Modifier</th>
                 <th>Supprimer</th>
               </tr>
