--- a/src/UserBundle/Resources/views/Gamer/list_scores.html.twig
+++ b/src/UserBundle/Resources/views/Gamer/list_scores.html.twig
@@ -241,6 +241,7 @@
                 <th>Pseudo</th>
                 <th>Prénom</th>
                 <th>Nom de famille</th>
+                <th>Vous êtes :</th>
                 <th>Meilleur score</th>
                 <th>Nombre de parties gagnées</th>
                 <th>Nombre de bonnes réponses</th>
@@ -253,6 +254,7 @@
                   <td>{{ otherGamer.username }}</td>
                   <td>{{ otherGamer.firstname }}</td>
                   <td>{{ otherGamer.usercount.username }}</td>
+                  <td>{{ otherGamer.role }}</td>
                   <td>{{ otherGamer.bestScore }}</td>
                   <td>{{ otherGamer.gameWonNb }}</td>
                   <td>{{ otherGamer.rightAnswerNb }}</td>
