--- a/src/GameBundle/Resources/views/Default/form_question.html.twig
+++ b/src/GameBundle/Resources/views/Default/form_question.html.twig
@@ -88,7 +88,7 @@
         var labelAnswers = $('#GameBundle_question_answers>.form-group label');
         var deleteButton = $('.deleteButton');
 
-        alert(urlValidation);
+        //alert(urlValidation);
         if (document.location.href.indexOf(urlValidation) != 0) {
             addAnswer($container);
             addAnswer($container);        
@@ -111,9 +111,6 @@
         });
         
     // functions
-            
-
-
         function addAnswer($container) {
             var template;
             if(nbAnswer === 0) {
