--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,24 +16,47 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="{{ path('homepage') }}">Le jeu de l'oie... érudit</a>
+                    <a class="navbar-brand" href="{{ path('homepage') }}">Le jeu de l'oie érudit</a>
                 </div>
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Accueil</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Le jeu <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Jouer</a></li>
-                            <li><a href="#">Scores</a></li>
-                            <li><a href="#">Administration</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Page 2</a></li>
+                    {% if app.user and is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        {% if is_granted('ROLE_TEACHER') %}
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Questions<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a href=" {{ path('add_question') }} ">Ajout</a></li>
+                                    <li><a href=" {{ path('moderate_question') }} ">Modération</a></li>
+                                    <li><a href=" {{ path('options_question') }} ">Options</a></li>
+                                </ul>
+                            </li>
+                            {% if is_granted('ROLE_ADMIN') %}
+                                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Utilisateurs<span class="caret"></span></a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href=" {{ path('admin_users') }} ">Gestion</a></li>
+                                    </ul>
+                                </li>
+                            {% endif %}
+                            <li><a href=" {{ path('list_scores') }} ">Scores et classements</a></li>
+                        {% endif %}
+                    {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><span class="glyphicon glyphicon-user"></span> Inscription</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+                    {% if app.user and is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        {% if is_granted('ROLE_USER') %}
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Bienvenue famille {{ app.user.username }} ! <span class="caret"></span></a>
+                        {% else %}
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span> Bienvenue Mme/M. {{ app.user.username }} ! <span class="caret"></span></a>
+                        {% endif %}
+                                <ul class="dropdown-menu">
+                                    <li><a href=" {{ path('logout') }} ">Déconnexion</a></li>
+                                </ul>
+                            </li>
+                    {% else %}
+                        <li><a href=" {{ path('signup') }} "><span class="glyphicon glyphicon-user"></span> Inscription</a></li>
+                        <li><a href=" {{ path('login') }} "><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+                    {% endif %}
                 </ul>
-            </div>
+            </div> 
         </nav>
 
         <div class="container-fluid">
